# hopper

./: .gitignore  AUTHORLIST.md  LICENSE  README.md  environment.yml  pyproject.toml
configs/: README.md  campaign_example.yaml  example.yaml  example_CCA.yaml  smoke.yaml  smoke10.yaml  smoke100.yaml  smoke1ms.yaml  smoke1ms32.yaml  smoke32.yaml
resources/: README.md  TE011_onRes_Vector_E_FieldMap_radius327mm_length4000mm_f560p3MHz_Q500_coarse.fld.npz  field_map_rz_components_CCA_V44.npz
src/: README.md
src/hopper/: README.md  __init__.py  config.py  constants.py
src/hopper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hopper/cavity/: README.md  __init__.py  cavity.py  interaction.py  mode_map.py  resonance.py  response.py
src/hopper/cli/: README.md  __init__.py  run_sim.py
src/hopper/dynamics/: README.md  __init__.py  axial_profile.py  axial_solver.py  drifts.py  kinematics.py  radiation.py  template.py  track.py
src/hopper/field/: README.md  __init__.py  coil_xml.py  field_map.py  generator.py  loop_field.py
src/hopper/io/: README.md  __init__.py  npz_io.py  root_io.py
src/hopper/nodes/: README.md  __init__.py  base.py  dynamics_node.py  mode_map_node.py  output_node.py  pipeline.py  resonance_node.py  signal_node.py  trap_node.py
src/hopper/readout/: README.md  __init__.py  digitizer.py  locust_like.py  noise.py
src/hopper/signal/: README.md  __init__.py  sampling.py  synth.py
src/hopper/utils/: README.md  __init__.py  interpolation.py  math.py  profiling.py
tests/: README.md  test_basic.py
